tests/baselines/reference/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.errors.txt
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,64): error TS2322: Type 'B' is not assignable to type 'C'.
  Property 'z' is missing in type 'B'.


==== tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts (1 errors) ====
    class Chain<T extends A> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain<S> {
            return null;
        }
    }
    
    class A {
        x;
    }
    class B extends A {
        y;
    }
    class C extends B {
        z;
    }
    
    // Ok to go down the chain, but error to try to climb back up
    (new Chain(new A)).then(a => new B).then(b => new C).then(c => new B).then(b => new A);
                                                                   ~~~~~
!!! error TS2322: Type 'B' is not assignable to type 'C'.
!!! error TS2322:   Property 'z' is missing in type 'B'.
!!! related TS6502 tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:3:27: The expected type comes from the return type of this signature.